<resources>
    <string name="facebook_application_id" translatable="false">1234</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">56789</string>

    <string name="app_name">Easy Dictionary</string>

    <string name="ok">Ok</string>
    <string name="or">OR</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="error_service_unavailable">Service is temporary unavailable</string>
    <string name="info">Info</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="save">Save</string>
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="optional">Optional</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="field_required">Field is required</string>
    <string name="undo">Undo</string>
    <string name="seconds">seconds</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="selected">Selected</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="success">Success</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="sort_a_z">A-Z</string>
    <string name="sort_z_a">Z-A</string>
    <string name="types">Types</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="menu">Menu</string>
    <string name="phonetic">Phonetic</string>
    <string name="close">close</string>
    <string name="search">Search</string>
    <string name="select_period">Select period</string>
    <string name="select_dates">Select dates</string>
    <!-- Sign-in -->
    <string name="sign_in_error_description">%s\nDo you want to retry?</string>
    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="my_dictionaries">My dictionaries</string>
    <string name="quiz">Quiz</string>
    <!-- Quiz -->
    <string name="my_quizzes">My quizzes</string>
    <string name="set_dictionary">Set dictionary</string>
    <string name="set_duration_per_word">Set duration for word</string>
    <string name="duration">Duration</string>
    <string name="seconds_value">%d seconds</string>
    <string name="seconds_dialog_description">Choose time (seconds) for each word</string>
    <string name="add_words">Add words</string>
    <string name="choose_dictionary">Set dictionary</string>
    <string name="set_dictionary_description">Please choose dictionary which you want to make a quiz</string>
    <string name="error_set_dictionary_first">You should set dictionary first</string>
    <string name="error_empty_duration">Please select duration</string>
    <string name="error_empty_dictionary">Please select dictionary</string>
    <string name="error_empty_words">Please choose at least one word for quiz</string>
    <string name="error_create_quiz">Something was wrong to create quiz</string>
    <string name="error_update_quiz">Something was wrong to update quiz</string>
    <string name="error_save_result_quiz">Something was wrong to save quiz result</string>
    <string name="translation">Translation</string>
    <string name="error_validation">Answer is not mismatch</string>
    <string name="fail_time_over">Failed. Time is over</string>
    <string name="quiz_ended_result">Quiz is ended. Your score: %d/%d</string>
    <string name="quiz_title">Quiz: %d/%d</string>
    <string name="total_words">Total words: %d</string>
    <string name="right_answers">Right answers: %d</string>
    <string name="add_quiz">Add quiz</string>
    <string name="edit_quiz">Edit quiz</string>
    <string name="reverse_dictionary">Reverse dictionary</string>
    <string name="hide_phonetic">Hide phonetic</string>
    <string name="show_tags">Display tags</string>
    <string name="show_categories">Display categories</string>
    <string name="show_types">Display types</string>
    <string name="error_delete_quiz">Something was wrong to delete quiz</string>
    <string name="quiz_count">Quizzes %d</string>
    <string name="are_you_sure">Are you sure?</string>
    <!-- Dictionary -->
    <string name="dictionary">Dictionary</string>
    <string name="add_dictionary">Add dictionary</string>
    <string name="edit_dictionary">Edit dictionary</string>
    <string name="dialect">Dialect</string>
    <string name="select_language_from">Select language from</string>
    <string name="select_language_to">Select language to</string>
    <string name="add_verb_time">Add verb tenses</string>
    <string name="add_verb_time_descriptional">It\'s optionally. You may add tenses of verbs and include them into your quizzes</string>
    <string name="add_tense">Add tense</string>
    <string name="delete_dictionary_title">Delete dictionary</string>
    <string name="error_delete_dictionary">Something was wrong to delete dictionary</string>
    <string name="error_create_dictionary">Something was wrong to create dictionary</string>
    <string name="error_update_dictionary">Something was wrong to update dictionary</string>
    <!-- Language -->
    <string name="add_language">Add language</string>
    <string name="add_your_own_language">Add your own language</string>
    <string name="or_add_your_own_language">Or add your own language</string>
    <string name="language_search_hint">English</string>
    <!-- Words -->
    <string name="words">Words</string>
    <string name="words_count">Words %d</string>
    <string name="add_word">Add word</string>
    <string name="edit_word">Edit word</string>
    <string name="words_search_hint">Hello</string>
    <string name="edit_translation">Edit translation</string>
    <string name="delete_word_title">Delete word</string>
    <string name="delete_translation_title">Delete translation</string>
    <string name="error_load_data">Something was wrong to load data</string>
    <string name="tap_your_word">Tap to add your word here</string>
    <string name="tap_to_add_phonetics">Tap to add phonetics</string>
    <string name="phonetic_keyboard">Phonetic keyboard</string>
    <string name="show_phonetics">Show phonetics</string>
    <string name="tap_your_translation">Tap to add your translation here</string>
    <string name="tap_to_add_example">Tap to add example</string>
    <string name="word_type">Type (optional)</string>
    <string name="translation_variants">Translation variants</string>
    <string name="add_translation_variants">Add translation variants</string>
    <string name="add_translation">Add translation</string>
    <string name="select_category_optional">Select or add category (optional)</string>
    <string name="select_category">Select category</string>
    <string name="select_word_type">Select word type (optional)</string>
    <string name="error_not_found_phonetics">Phonetic symbols don\'t find for this language</string>
    <string name="category_name">Category name</string>
    <string name="add_category">Add category</string>
    <string name="error_empty_translations">You have to add at least one translation variant</string>
    <string name="error_create_word">Something was wrong to add word</string>
    <string name="error_translation_exist">Translation is already exist</string>
    <string name="error_translations_empty">You must add at least one translation</string>
    <string name="error_update_word">Something was wrong to update word</string>
    <string name="error_update_translation">Something was wrong to update translation</string>
    <string name="error_delete_word">Something was wrong to delete word</string>
    <string name="hide_translations">Hide all translations</string>
    <string name="category_color_value" translatable="false"><![CDATA[<font color=\'#00C853\'>%s</font> - <font color=\'#000000\'>%s</font>]]></string>
    <!-- Tags -->
    <string name="add_or_choose_tags">Add or choose tags</string>
    <string name="add_tag">Add tag</string>
    <string name="error_tag_exist">Tag is already exist</string>
    <string name="tags">Tags</string>
    <string name="categories">Categories</string>
    <string name="tags_count">Tags %d</string>

    <string name="menu_drawer_open">DrawerOpen</string>
    <string name="menu_drawer_closed">DrawerClosed</string>
    <string name="error_password_length">Must be at least 8 letters</string>
    <string name="error_password_upper_letter">Must be at least one upper case latter</string>
    <string name="error_password_lower_letter">Must be at least one lower case latter</string>
    <string name="error_passwords_not_match">Passwords are not match</string>
    <string name="error_email_format_failed">Failed email address</string>
    <string name="error_field_empty">Field cannot be empty</string>
</resources>