...
            defaultValue = "",
            onValueChange = { value -> contract.onPasswordChanged(value) },
            isPasswordValid = ui.isPasswordValid,
            label = stringResource(R.string.password)
        )
        Spacer(modifier = Modifier.height(6.dp))
        ButtonPrimary(title = stringResource(R.string.log_in), enabled = ui.isFormValid, modifier = Modifier.testTag("btn-login")) {
            contract.onSubmit()
        }
        Spacer(modifier = Modifier.height(6.dp))
        TextFieldLabel(
            label = stringResource(R.string.or), modifier = Modifier
                .wrapContentSize()
...
